# CardGameEngine

./: .clangd  .gitignore  CMakeLists.txt  main.cpp  setup.ps1
engine/: animation.h  audio.h  card.h  core.h  debug.h  foundation.h  input.h  platform.h  render.h  resource.h  scene.h  script.h  ui.h
engine/animation/: animation_clip.h  animation_system.cpp  animation_system.h  easing.cpp  easing.h
engine/audio/: audio_system.cpp  audio_system.h
engine/card/: card.cpp  card.h  card_battlefield.cpp  card_battlefield.h  card_data.h  card_deck.cpp  card_deck.h  card_graveyard.h  card_hand.cpp  card_hand.h  card_hand_layout.cpp  card_hand_layout.h  card_system.cpp  card_system.h  card_zone.cpp  card_zone.h
engine/core/: engine.cpp  engine.h  engine_config.h  event_bus.cpp  event_bus.h  game_clock.cpp  game_clock.h  module_manager.cpp  module_manager.h  turn_timer.cpp  turn_timer.h
engine/debug/: debug_system.cpp  debug_system.h
engine/foundation/: core_log.cpp  core_log.h  math_types.cpp  math_types.h  math_utils.cpp  math_utils.h
engine/input/: input_action.h  input_system.cpp  input_system.h
engine/platform/: i_platform.h  platform_rwops.h  sdl_platform.cpp  sdl_platform.h
engine/render/: camera.cpp  camera.h  render_system.cpp  render_system.h  sprite.h  sprite_batcher.cpp  sprite_batcher.h
engine/resource/: resource_entry.h  resource_handle.h  resource_manager.cpp  resource_manager.h
engine/scene/: scene.h  scene_manager.cpp  scene_manager.h
engine/script/: script_binder.cpp  script_binder.h  script_system.cpp  script_system.h
engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_label.cpp  ui_label.h  ui_panel.cpp  ui_panel.h  ui_system.cpp  ui_system.h
tests/: CMakeLists.txt  test_camera.cpp  test_card.cpp  test_easing.cpp  test_event_bus.cpp  test_math.cpp  test_module_manager.cpp
tools/: add_namespace.ps1  build_engine.ps1  build_tests.ps1  clean_engine.ps1  clean_tests.ps1  expand_compile_commands.ps1
